5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1724_2525.log
== TEST (2019-05-14 10:39:33) 
-- CODE:
n = int(input("numero inteiro: "))
d = 0
i=2

while(n=!1):
	while((n//i)==0):
		n=n//2
		d= d+1
		print(d)
	i = i+1
	while((n//i)==0):
		n=n//3
		d=d+1
		print(d)
print(x,"divisores")
-- ERROR:
File "XXXX", line 5
    while(n=!1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:39:42) 
-- CODE:
n = int(input("numero inteiro: "))
d = 0
i=2

while(n!=1):
	while((n//i)==0):
		n=n//2
		d= d+1
		print(d)
	i = i+1
	while((n//i)==0):
		n=n//3
		d=d+1
		print(d)
print(x,"divisores")
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:58:18) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(n>1):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:58:26) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(n>1):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:58:33) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(n>1):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:33) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:36) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:19) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:29) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:29) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:42) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:46) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		i=i+1
print(i,"divisores")
-- ERROR:
File "XXXX", line 11
    print(i,"divisores")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:14) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		i=i+1
		d=d+1
print(i,"divisores")
-- OUTPUT:
1
2
3
4
6
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:26) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if(n==1):
		print("1 divisor")
	elif((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		#i=i+1
		d=d+1
print(i,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:00) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		#i=i+1
		d=d+1
print(i,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:04:16) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		#i=i+1
		d=d+1
print(i,"divisores")
-- EXECUTION TIME:
0.286603
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:08:01) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
print(i,"divisores")
-- EXECUTION TIME:
511.43
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:49) 
-- CODE:
n = int(input("numero inteiro: "))
d = 1
i=0
while(d<=n):
	if((n%d)==0):
		print(d)
		d= d+1
		i = i+1
	else:
		#i=i+1
		d=d+1
print(i,"divisores")
-- EXECUTION TIME:
0.15815
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
